fix: center-align Add Recipe Form

--- a/src/components/AddRecipeForm/AddRecipeForm.module.scss
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.scss
@@ -1,11 +1,15 @@
 .AddRecipeContainer {
   box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.25); // Move to common component.
+  display: flex;
+  justify-content: center;
 
   .AddRecipeForm {
     display: flex;
     flex-direction: column;
     gap: 8px;
     padding: 16px;
+    max-width: 600px;
+    width: 100%;
     
     .AddRecipeTitle {
       font-size: 1.25em;
